NEW: Api endpoint getting user by id. Added new doc for this api endpoint
